--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
+    "@reduxjs/toolkit": "^2.8.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -24,6 +25,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "router": "^1.3.8",
