--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.6",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.9",
     "jest-dom": "^4.0.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.510.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
@@ -27,6 +33,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "router": "^1.3.8",
+    "tailwind-merge": "^3.3.0",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
@@ -61,7 +68,7 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.17"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "tailwind.config.js",
