--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
-    "@reduxjs/toolkit": "^2.8.1",
+    "@reduxjs/toolkit": "1.9.5",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -21,15 +21,26 @@
     "jest-dom": "^4.0.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
-    "react-redux": "^9.2.0",
+    "react-redux": "8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "router": "^1.3.8",
     "web-vitals": "^3.4.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,16 +65,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.48.0",
-    "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0",
-    "tailwindcss": "^3.3.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "tailwind.config.js",
