--- a/package.json
+++ b/package.json
@@ -12,23 +12,31 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.16.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "1.9.5",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.9",
     "jest-dom": "^4.0.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.511.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
+    "react-label": "^0.0.6",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "tailwind-merge": "^3.3.0",
+    "tw-animate-css": "^1.3.1",
     "web-vitals": "^3.4.0"
   },
   "devDependencies": {
